Made Some Changes

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +7,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <title>Ninja Music Player</title>
 </head>
-
 <body>
     <header>
         <div class="cont">
@@ -29,7 +27,6 @@
                     <input type="text" placeholder="Search">
                 </div>
                 <div class="noti">
-                    <!-- <img src="images/noti.png" alt="noti"> -->
                     <i class="fa fa-bell"></i>
                 </div>
             </div>
@@ -39,29 +36,17 @@
                 <i class="fa fa-angle-down"></i>
             </div>
         </div>
-
     </header>
-
     <main>
         <div class="container">
             <h1 class="main-heading"></h1>
             <div class="content">
-                <!-- The content which is placed at the center of the carousel -->
-                <!-- <div class="carousel-content">
-                    <h1 class="carousel-heading">
-                        Listen to These ":)"
-                    </h1>
-                    <h3>Here is the top songs of this week</h3>
-                </div> -->
                 <div id="both">
                 <div class="slideshow">
-                    <!-- carousel control buttons -->
                     <button class="slide-btn slide-btn-1"></button>
                     <button class="slide-btn slide-btn-2"></button>
                     <button class="slide-btn slide-btn-3"></button>
                     <button class="slide-btn slide-btn-4"></button>
-                    <!-- carousel wrapper which contains all images -->
-                   
                     <div class="slideshow-wrapper">
                         <div class="slide">
                             <img class="slide-img" src="images/mus1.jpg">
@@ -79,10 +64,9 @@
 
                     <div class="Greet">
                         <div class="greetings">
-                            <h1>Hello, Welcome back :) </h1>
+                            <h1>Hello, Welcome back Pookie :) </h1>
                         </div>
                     </div>
-
                 </div>
                  <div class="queue">
                     <h2>Queue</h2>
@@ -144,15 +128,12 @@
                     </ul>
                   </div>
                   </div>
-               
             </div>
             <br>
             <br>
-
             <div class="songs">
                 <h8>Latest release</h8>
             </div>
-
             <div class="suggestions">
                 <div class="block">
                     <img src="images/song1.jpg" alt="Image 1">
@@ -194,7 +175,6 @@
             <div class="artists">
                 <h8>Popular Artists</h8>
             </div>
-
             <div class="image-row">
                 <div class="image-container">
                     <a href="index1.html">
@@ -230,13 +210,10 @@
                     <div class="play-button">&#9658;</div>
                 </div>
             </div>
-
             <br>
-
             <div class="type">
                 <h8>Genre</h8>
             </div>
-
             <div class="genre">
                 <div class="generes">
                     <img src="images/station icon.jpg" alt="Default">
@@ -255,36 +232,28 @@
                     <div class="play">&#9658;</div>
                 </div>
             </div>
-
             <br>
             <br>
             <br>
-
             <div class="typo">
                 <div class="other">
                     <img src="images/party.jpg" alt="party icon">
                     <div class="text-over-image">Party</div>
                 </div>
-
                 <div class="other">
                     <img src="images/electronic.jpg" alt="electronic icon">
                     <div class="text-over-image">Electronic</div>
                 </div>
-
                 <div class="other">
                     <img src="images/roadtrip.jpg" alt="roadtrip icon">
                 </div>
             </div>
-
             <br/>
             <br>
-
             <div class="artists">
                 <h8>Latest English Hits</h8>
             </div>
-
             <br>
-
             <div class="image-row">
                 <div class="imagesss">
                     <img src="images/et.jpg" alt="Image 1">
@@ -318,16 +287,12 @@
                     <div class="play-button">&#9658;</div>
                 </div>
             </div>
-
             <br>
             <br>
-
             <div class="artists">
                 <h8>Latest Hindi Hits</h8>
             </div>
-
             <br>
-
             <div class="image-row">
                 <div class="imagesss">
                     <img src="images/et.jpg" alt="Image 1">
@@ -362,12 +327,10 @@
             </div>
         </div>
     </main>
-
     <br />
     <br />
     <br />
     <br />
-
     <div class="bottom">
         <div class="play">
             <img src="images/song1.jpg" alt="Image 1">
@@ -378,10 +341,7 @@
         </div>
     </div>
 </body>
-
 </html>
 </div>
-
 </body>
-
 </html>
